fixed ui to display better on mobile

--- a/src/bagDraw/BagDraw.css
+++ b/src/bagDraw/BagDraw.css
@@ -5,6 +5,7 @@
 }
 
 .BagDraw__title {
+    width: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -24,8 +25,12 @@
 }
 
 .Card__title.BagDraw__subtitle {
-    width: 90%;
-    font-size: 40pt;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 30pt;
     color: gray;
     margin: auto;
+    overflow: hidden;
 }
